--- a/index.html
+++ b/index.html
@@ -32,6 +32,44 @@
 </head>
 
 <body>
+    <!-- main content -->
+    <main class="max-w-screen-xl mx-auto px-16 lg:px28">
+        <!-- header section -->
+        <header class="flex pt-10 mb-20">
+            <!-- tex-content -->
+            <div>
+                <h1 class="text-5xl md:text-7xl">It's good <br> tea time at <br> The Tea House</h1>
+                <br>
+                <p class="text-gray-500 w-3/4">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your
+                    Taste Buds.</p>
+                <br>
+                <button
+                    class="bg-gradient-to-r from-orange-500 to-red-500 px-5 py-3 rounded-lg text-white font-bold">Explore
+                    More <i class="fa-solid fa-arrow-right -rotate-45 txt-xl"></i></button>
+            </div>
+
+            <!-- image-content -->
+            <div class="relative">
+                <!-- image -->
+                <div>
+                    <img class="w-full" src="/images/banner.png" alt="">
+                </div>
+
+                <!-- card -->
+                <div class=" absolute flex items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg top-28 md:top-80 md:left-32 lg:left-28">
+                    <!-- icon -->
+                    <div><i class="fa-solid fa-star text-2xl text-orange-500"></i></div>
+                    <!-- text -->
+                    <div class="ml-2">
+                        <h2 class="lg:text-2xl font-bold">5.00</h2>
+                        <p class="text-gray-500">Trust Pilot Ratings</p>
+                    </div>
+                </div>
+            </div>
+        </header>
+
+
+    </main>
 
 </body>
 
