--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     <!-- main content -->
     <main class="max-w-screen-xl mx-auto px-16 lg:px28">
         <!-- header section -->
-        <header class="flex pt-10 mb-20">
+        <header class="lg:flex pt-10 mb-20">
             <!-- tex-content -->
             <div>
-                <h1 class="text-5xl md:text-7xl">It's good <br> tea time at <br> The Tea House</h1>
+                <h1 class="text-5xl md:text-7xl font-bold">It's good <br> tea time at <br> The Tea House</h1>
                 <br>
                 <p class="text-gray-500 w-3/4">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your
                     Taste Buds.</p>
@@ -56,7 +56,8 @@
                 </div>
 
                 <!-- card -->
-                <div class=" absolute flex items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg top-28 md:top-80 md:left-32 lg:left-28">
+                <div
+                    class=" absolute flex items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg top-28 md:top-80 md:left-32 lg:left-28">
                     <!-- icon -->
                     <div><i class="fa-solid fa-star text-2xl text-orange-500"></i></div>
                     <!-- text -->
@@ -67,6 +68,54 @@
                 </div>
             </div>
         </header>
+
+        <!-- feature section -->
+
+        <section class="py-8 lg:py-24">
+            <!-- titles -->
+            <div class="text-center mb-8">
+                <h1 class="text-3xl md:text-4xl font-bold mb-3">Our Featured Products</h1>
+                <p class="text-gray-600 max-w-xl mx-auto">There are many variations of passages of Lorem Ipsum
+                    available, but the majority have suffered alteration in some form, by injected humour, or randomised
+                    words which don't look even slightly believable. </p>
+            </div>
+
+            <!-- grid cards -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 text-center">
+                <!-- card -->
+                <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                    <img class="mx-auto pt-4" src="/images/tea-1.png" alt="">
+                    <div class="p-4">
+                        <h2 class="font-bold text-xl">Milk tea</h2>
+                        <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <!-- card -->
+                <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                    <img class="mx-auto pt-4" src="/images/tea-2.png" alt="">
+                    <div class="p-4">
+                        <h2 class="font-bold text-xl">Black tea</h2>
+                        <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <!-- card -->
+                <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                    <img class="mx-auto pt-4" src="/images/tea-3.png" alt="">
+                    <div class="p-4">
+                        <h2 class="font-bold text-xl">Green tea</h2>
+                        <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <!-- card -->
+                <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                    <img class="mx-auto pt-4" src="/images/tea-4.png" alt="">
+                    <div class="p-4">
+                        <h2 class="font-bold text-xl">Lemon tea</h2>
+                        <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
     </main>
